package com.hospital.management.enums;

/**
 * Type of medication.
 */
public enum MedicationType {
    TABLET,
    CAPSULE,
    SYRUP,
    INJECTION,
    CREAM,
    OTHER
}
