package com.hospital.management.enums;

/**
 * Gender options for patients.
 */
public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
