package com.hospital.management.enums;

/**
 * User roles in the hospital management system.
 */
public enum UserRole {
    DOCTOR,
    PATIENT,
    PHARMACIST,
    ADMIN,
    DIRECTOR
}
